--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
+      - name: Create deployment package
         run: |
-          docker build -t cloud-microservice .
+          zip -r deploy.zip . -x ".git/*" -x "venv/*"
 
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
@@ -29,4 +26,4 @@ jobs:
           application_name: cloud-microservice-app
           environment_name: cloud-microservice-app-env
           version_label: ${{ github.sha }}
-          deployment_package: .
+          deployment_package: deploy.zip
